# animal-button-box

./: .gitignore  CMakeLists.txt  README.MD
fritzing/: animal_button_box.fzz
src/: CMakeLists.txt  board.h  main.c
src/lib/: CMakeLists.txt
src/lib/adc/: adc.c
src/lib/adc/include/: adc.h
src/lib/anibubox/: CMakeLists.txt  anibubox.c  anibubox_core1.c  anibubox_sm.c
src/lib/anibubox/include/: anibubox.h  anibubox_sm.h
src/lib/bno055/: bno055.c
src/lib/bno055/include/: bno055.h
src/lib/button/: CMakeLists.txt  button.c
src/lib/button/include/: button.h
src/lib/console/: consoleCommands.c
src/lib/epaper/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  Debug.h  EPD_1in54_V2.c  GUI_Paint.c  GUI_Paint.h  epaper.c  fonts.h
src/lib/epaper/include/: epaper.h
src/lib/i2c/: i2c.c
src/lib/led/: led.c
src/lib/led/include/: led.h
src/lib/piezo/: CMakeLists.txt  piezo.c
src/lib/piezo/include/: piezo.h
src/lib/pio/: pio.c
src/lib/pio/include/: pio.h
src/lib/sleepy_time/: CMakeLists.txt  sleepy_time.c
src/lib/sleepy_time/include/: sleepy_time.h
src/lib/spi/: spi.c
src/lib/spi/include/: spi.h
src/lib/update/: CMakeLists.txt  update.c
src/lib/update/include/: update.h
