add_subdirectory(anibubox)
add_subdirectory(button)
add_subdirectory(led)
add_subdirectory(pio)
add_subdirectory(adc)
add_subdirectory(update)
add_subdirectory(sleepy_time)
add_subdirectory(piezo)
add_subdirectory(epaper)
add_subdirectory(spi)
add_subdirectory(i2c)
add_subdirectory(console)
add_subdirectory(bno055)